2010-01-20  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-get-default-sentinel): Show
	the reason phrase with status code if status code is not "200";
	same as `twittering-http-post-default-sentinel'.
	(twittering-http-get-list-index-sentinel): Likewise.

	* twittering-mode.el (twittering-http-status-line-regexp): New
	defconst to share this between several functions. The regexp
	pattern to obey to RFC 2616.
	(twittering-http-get-default-sentinel): Use it.
	(twittering-http-post-default-sentinel): Likewise.
	(twittering-http-get-list-index-sentinel): Likewise.

	* twittering-mode.el (twittering-tinyurl-get): Remove an
	unnecessary call to `concat'.

	* twittering-mode.el (twittering-update-jojo): Make a tweet by
	`twittering-ucs-to-char' instead of `string-as-multibyte'.

2010-01-19  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-get-first-status-head): add.
	(twittering-goto-first-status): add.
	(twittering-mode-map): bind `twittering-goto-first-status' to "H"
	instead of `begininng-of-buffer'.
	(twittering-render-timeline): use `twittering-goto-first-status'.

2010-01-18  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-ucs-to-char): Add a workaround
	with navi2ch prior to 1.8.3, which is currently last release
	version as of 2010-01-18. The problem is fixed in navi2ch dated
	2010-01-16 or later, but not released yet.

2010-01-17  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-format-status): fix the regexp
	for the specifier "%FILL{...}" to accept pairs of braces inside of
	"{...}".

	* twittering-mode.el (twittering-format-status): add new format
	decorator "%FACE[face-name]{...}", which decorates braced strings
	with the specified face.

	* twittering-mode.el (twittering-render-timeline): support
	additional rendering.
	(twittering-http-get-default-sentinel): send the additional
	argument `same-timeline' to `twittering-render-timeline'.