@@ -1,3 +1,8 @@
+2010-01-21  Tadashi MATSUO  <tad@mymail.twin.jp>
+
+	* twittering-mode.el (twittering-render-timeline): reduce
+	redundant calls of `goto-char'.
+
 2010-01-20  Satoshi Yatagawa  <yata_github@y.hauN.org>
 
 	* twittering-mode.el (twittering-http-get-default-sentinel): Show
